<?xml version="1.0"?>
<package format="2">
  <name>deeplumin_cmake</name>
  <version>1.0.0</version>
  <description>DeepLumin unified CMake dependency management - central management of PCL, OpenCV, Eigen, CUDA, TensorRT versions</description>
  <maintainer email="developer@example.com">Developer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
