<?xml version="1.0"?>
<package format="2">
  <name>motion_controller</name>
  <version>1.0.0</version>
  <description>Motion controller</description>
  <maintainer email="developer@example.com">Developer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>deeplumin_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>deeplumin_msgs</exec_depend>
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
