<?xml version="1.0"?>
<package format="2">
  <name>slam_odometry</name>
  <version>1.0.0</version>
  <description>Standalone Faster-LIO SLAM odometry node for DeepLumin</description>
  <maintainer email="developer@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf</depend>
  <depend>deeplumin_msgs</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
