<?xml version="1.0"?>
<package format="2">
  <name>gnss_driver</name>
  <version>1.0.0</version>
  <description>GNSS driver node</description>
  <maintainer email="developer@example.com">Developer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
